@@ -37,6 +37,7 @@
       },
       "runtime" : {
          "requires" : {
+            "List::Util" : "1.33",
             "RDF::Query" : "0",
             "RDF::Query::Client" : "0",
             "RDF::Trine" : "0",
@@ -64,6 +65,6 @@
          "web" : "https://github.com/gbv/skos2jskos"
       }
    },
-   "version" : "0.1.1"
+   "version" : "0.1.2"
 }
 
